...
    @State var page: SigninPage = .instance
    @State var instance = ""
    @State var code = ""
    @State var username = ""
    @State var password = ""
    @State var isError = false
    @Binding var done: Bool
    
    var body: some View {
        if page == .instance {
            VStack {
                Text("Welcome to Etoile")
                    .accessibilityIdentifier("welcome")
...
            }
        } else if page == .key {
            HStack {
                VStack {
                    TextField("Username", text: $username)
                        .accessibilityIdentifier("username")
                    SecureField("Password", text: $password)
                        .accessibilityIdentifier("password")
                    Button {
                        Task {
                            do {
                                guard let instanceUrl = URL(string: instance) else { return }
                                
...
