...
    
    var body: some View {
        HStack {
            VStack {
                Image(uiImage: UIImage(data: album.art ?? Data()) ?? UIImage(systemName: "questionmark")!)
                Text(album.name)
                    .accessibilityIdentifier("albumName")
                    .fontWeight(.bold)
                Text(album.artist)
            }
            List(songs.sorted(by: { $0.positionInAlbum < $1.positionInAlbum})) {song in
                Button(action: {
                    Task {
...
