...
        homeViewController.viewControllers = [HomeViewController()]
        homeViewController.tabBarItem = UITabBarItem(title: "Home", image: UIImage(systemName: "house"), tag: 0)
        homeViewController.tabBarItem.accessibilityIdentifier = "homeTabBarItem"
        
        albumsViewController.viewControllers = [AlbumsVerticalListViewController()]
        albumsViewController.tabBarItem = UITabBarItem(title: "Albums", image: UIImage(systemName: "rectangle.stack"), tag: 1)
        albumsViewController.tabBarItem.accessibilityIdentifier = "albumsTabBarItem"
        
        searchVC.viewControllers = [SearchViewController()]
        searchVC.tabBarItem = UITabBarItem(title: "Search", image: UIImage(systemName: "magnifyingglass"), tag: 0)
        searchVC.tabBarItem.accessibilityIdentifier = "searchTabBarItem"
        
        playlistVc.viewControllers = [PlayListHomeViewController()]
...
