...
            make.right.equalTo(view.snp.right)
            make.top.equalTo(view.snp.top)
            make.bottom.equalTo(view.snp.bottom)
        }
        
        
        tableView.accessibilityIdentifier = "albumVerticalTableView"
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "albumCell")
        tableView.dataSource = self
        tableView.delegate = self
        tableView.rowHeight = 64
        tableView.separatorEffect = .none
        tableView.backgroundColor = .clear
...
